syntax = "proto3";

option csharp_namespace = "DemoProject.GrpcServer.EmailService";

package emailservice;

service EmailService {
    rpc SendOrderConfirmation (SendOrderConfirmationRequest) returns (SendOrderConfirmationResponse);
}
message SendOrderConfirmationRequest {
    string order_id = 1;
}
message SendOrderConfirmationResponse {
    bool success = 1;
    string message = 2;
}